# api.deepersensor

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  README.md  SECURITY.md  TESTING.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  env.sample
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto.yml  docker.yml
.idx/: dev.nix
.well-known/: security.txt
TODO/: prod.md
api/: Cargo.toml  Dockerfile
api/src/: app.rs  cors.rs  main.rs  observability.rs  rate_limit.rs  shutdown.rs
crates/api/: Cargo.toml  Dockerfile
crates/api/src/: app.rs  auth_middleware.rs  cors.rs  main.rs  observability.rs  request_id.rs  routes.rs  security.rs  state.rs  validation.rs
crates/api/tests/: integration_tests.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
migrations/: 0001_init.sql  0002_conversations_messages.sql
nginx/: Dockerfile  nginx.conf
scripts/: backup-db.sh  restore-db.sh
