[workspace]
resolver = "2"
members = [
    "api",
    "crates/core",
    "crates/model",
    "crates/auth"
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["DeeperSensor <dev@deepersensor.com>"]

[workspace.dependencies]
# Async / Runtime
Tokio = { package = "tokio", version = "1", features = ["rt-multi-thread","macros","signal","time"] }
axum = { version = "0.7", features = ["macros","json"] }
hyper = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace","cors","request-id","limit","compression-br", "compression-gzip"] }

# Serde / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt","json"] }
tracing-error = "0.2"

# Errors / Utils
thiserror = "1"
anyhow = "1"
once_cell = "1"

# Auth & Security (placeholders for later)
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# HTTP Client
reqwest = { version = "0.12", features = ["json","stream","gzip","brotli","deflate"] }

# Rate limiting / Redis
redis = { version = "0.25", features = ["tokio-comp","aio","connection-manager"] }

dashmap = "5"

[workspace.metadata.cargo-machete]
ignored = ["Tokio"]
