[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/core",
    "crates/model",
    "crates/auth"
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["DeeperSensor <official-support@deepersensor.com>"]

[workspace.dependencies]
# Async / Runtime
tokio = { version = "1", features = ["rt-multi-thread","macros","signal","time"] }
axum = { version = "0.7", features = ["macros","json","tokio"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util","limit"] }
tower-http = { version = "0.5", features = ["trace","cors","request-id","limit","compression-br", "compression-gzip", "set-header"] }

# Serde / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt","json"] }
tracing-error = "0.2"

# Errors / Utils
thiserror = "1"
anyhow = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

# Concurrency & Async Helpers
futures-util = "0.3"
futures-core = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Auth & Security (placeholders for later)
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json","stream","gzip","brotli","deflate","rustls-tls"] }

# Rate limiting / Redis
redis = { version = "0.25", features = ["tokio-comp","aio","connection-manager"] }
dashmap = "5"

# Database (added for persistence phase groundwork)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","postgres","uuid","chrono","macros"] }
chrono = { version = "0.4", features = ["clock","serde"] }

[workspace.metadata.cargo-machete]
ignored = ["tokio"]
