[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
 tokio = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
sqlx = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
# Internal crates
ds-core = { path = "../core" }
ds-model = { path = "../model" }
ds-auth = { path = "../auth" }

[dev-dependencies]
anyhow = { workspace = true }
