[package]
name = "ds-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64ct = "=1.8.0" # pinned to avoid edition2024 in 1.8.0
